--- a/settings/project.json
+++ b/settings/project.json
@@ -23,7 +23,7 @@
     "height": 640,
     "width": 960
   },
-  "start-scene": "9cc9053c-fd0e-4fde-809d-6d921d51f465",
+  "start-scene": "current",
   "use-customize-simulator": false,
   "use-project-simulator-setting": false
 }
