--- a/packages/stateeditor/package.json
+++ b/packages/stateeditor/package.json
@@ -18,5 +18,12 @@
     "title": "状态机测试",
     "width": "100%",
     "height": "100%"
+  },
+  "dependencies": {
+    "javascript-state-machine": "^2.4.0",
+    "sequelize": "^3.30.4",
+    "sqlite3": "^3.1.8",
+    "store": "^1.0.13",
+    "vis": "^4.19.1"
   }
 }
